--- a/app/Bar/Bar/Bar.csproj
+++ b/app/Bar/Bar/Bar.csproj
@@ -64,11 +64,19 @@
     </Compile>
     <Compile Include="domain\BillsManager.cs" />
     <Compile Include="domain\Category.cs" />
+    <Compile Include="domain\HOrder.cs" />
+    <Compile Include="domain\ShortBill.cs" />
+    <Compile Include="presentation\ConsultDialog.xaml.cs">
+      <DependentUpon>ConsultDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="presentation\EditCategory.xaml.cs">
       <DependentUpon>EditCategory.xaml</DependentUpon>
     </Compile>
     <Compile Include="presentation\EditProductWin.xaml.cs">
       <DependentUpon>EditProductWin.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="presentation\StatisticsWin.xaml.cs">
+      <DependentUpon>StatisticsWin.xaml</DependentUpon>
     </Compile>
     <Compile Include="Service References\webSercives\Reference.cs">
       <AutoGen>True</AutoGen>
@@ -137,7 +145,7 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
-    <None Include="Service References\webSercives\Services.wsdl" />
+    <None Include="Service References\webSercives\Services1.wsdl" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
@@ -146,6 +154,10 @@
     <Page Include="presentation\BillDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="presentation\ConsultDialog.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="presentation\EditCategory.xaml">
       <SubType>Designer</SubType>
@@ -183,12 +195,13 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="presentation\StatisticsWin.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <WCFMetadataStorage Include="Service References\webSercives\" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Service References\webSercives\Services.disco" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Service References\webSercives\configuration91.svcinfo" />
@@ -330,6 +343,51 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\editP2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\webSercives\Services1.disco" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\newJ2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\newJ.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\loadJ.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\loadCat.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\saveCat.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\addC.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\removeC.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\editC.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\addP.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\removeP.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\editP.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\loadBills.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\loadHOrders.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\bills.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
